# python_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.in  tox.ini
.github/badges/: coverage.md  license.md  poetry.md  pytest.md  python.md  ruff.md  version.md
docs/: mkdocs.yml
docs/source/: 404.md  api.md  index.md  tags.md
docs/source/dev/: code-of-conduct.md  contributing.md
docs/source/user-guide/: installation.md  usage.md
src/python_template/: __init__.py  example.py  main.py
tests/: test_example.py  test_main.py
